migrate all tests to new test endpoint and delete the old way